<resources>
    <string name="app_name">Jargon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="add_word">Add word</string>
    <string name="view_list">View list</string>
    <string name="create_private_list">Create private list</string>
    <string name="examination">Examination</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="list_name">List name</string>
    <string name="type">Type</string>
    <string name="enter_the_name_of_the_new_type">Enter the name of the new Type</string>
    <string name="create_type">Create type</string>
    <string name="title_activity_copy">CopyActivity</string>
    <string name="view_all_types">View all types</string>
    <string name="developer_s_info">Developer\'s Info</string>
    <string name="title_activity_view_list">ViewListActivity</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="title_activity_view_list_word">ViewListWordActivity</string>
    <string name="exam_from_opposite_direction">Exam from opposite direction</string>
    <string name="total_words">Total words</string>
    <string name="total_correct">Total correct</string>
    <string name="total_wrong">Total wrong</string>
    <string name="your_answer">Your Answer</string>
    <string name="background">Background Image</string>
    <string name="amrit_bhattacharjee">Amrit Bhattacharjee</string>
    <string name="dept_of_cse">Department of Computer Science and Engineering</string>
    <string name="university_of_chittagong">University of Chittagong</string>
    <string name="backup_data">Backup data</string>
    <string name="import_data">Import data</string>
    <string name="ab181094_gmail_com">ab181094@gmail.com</string>
    <string name="developer">Developer</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="result_comment">Result Comment</string>
</resources>
