<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/amrit_bhattacharjee"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/ab181094_gmail_com"
                    android:textColor="@color/colorTeal"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/dept_of_cse"
                    android:textColor="@color/colorTeal"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/university_of_chittagong"
                    android:textColor="@color/colorTeal"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="5dp"
            android:src="@drawable/my_image"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

    </LinearLayout>

</LinearLayout>